--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,6 +17,8 @@
         <item name="titleTrackColor">@color/white</item>
         <item name="infoTrackColor">@color/white</item>
         <item name="colorNote">@color/color_note_dark</item>
+        <item name="colorControlPanel">@color/control_panel_color_dark</item>
+        <item name="colorInformationValue">@color/ap_information_value_dark</item>
     </style>
 
     <style name="Theme.PlaylistMaker.Main" parent="Base.Theme.PlaylistMaker" />
