--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,4 +6,7 @@
     <attr name="titleTrackColor" format="reference|color"/>
     <attr name="infoTrackColor" format="reference|color"/>
     <attr name="colorNote" format="reference|color"/>
+    <attr name="colorControlPanel" format="reference|color"/>
+    <attr name="colorInformationTitle" format="reference|color"/>
+    <attr name="colorInformationValue" format="reference|color"/>
 </resources>
