--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,8 @@
         <item name="titleTrackColor">@color/black</item>
         <item name="infoTrackColor">@color/icon_color_light</item>
         <item name="colorNote">@color/color_note_light</item>
+        <item name="colorControlPanel">@color/control_panel_color_light</item>
+        <item name="colorInformationValue">@color/ap_information_value_light</item>
 
     </style>
 
