--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -22,6 +22,15 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/right_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/margin_guide_begin_audio_player"
+        />
+
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_guide_content_line"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +39,7 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/right_guideline"
+        android:id="@+id/right_content_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -50,6 +59,17 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_end="@dimen/margin_guide_bottom_audio_player"/>
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="track_time_title,
+        collection_name_title,
+        release_date_title,
+        primary_genre_name_title,
+        country_title" />
+
     <ImageView
         android:id="@+id/arrow_back"
         android:src="@drawable/arrow_back"
@@ -66,15 +86,16 @@
         android:contentDescription="@string/content_description_audio_player"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
         app:layout_constraintTop_toTopOf="@+id/top_guide"
          />
 
     <TextView
         android:id="@+id/trackName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
         app:layout_constraintTop_toBottomOf="@id/cover"
         style="@style/apTitle"
@@ -82,8 +103,9 @@
 
     <TextView
         android:id="@+id/trackAuthor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
         app:layout_constraintTop_toBottomOf="@id/trackName"
         />
@@ -91,7 +113,7 @@
     <ImageView
         android:id="@+id/play"
         android:src="@drawable/play"
-        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
         app:layout_constraintTop_toBottomOf="@+id/trackAuthor"
         style="@style/apControlPanelPlay"
@@ -114,7 +136,7 @@
         android:layout_height="@dimen/size_control_panel_btn"
         android:scaleType="fitEnd"
         android:src="@drawable/like"
-        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
+        app:layout_constraintEnd_toEndOf="@+id/right_content_guideline"
         app:layout_constraintTop_toTopOf="@id/play"
         app:layout_constraintBottom_toBottomOf="@id/play"
         />
@@ -124,7 +146,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
-        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@+id/play"
         style="@style/apTime"
         />
@@ -134,15 +156,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/duration_audio_player"
-        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/timer"
         style="@style/apInformationTitle"
         />
 
     <TextView
         android:id="@+id/track_time_value"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintEnd_toEndOf="@+id/right_guideline"
         app:layout_constraintTop_toTopOf="@id/track_time_title"
         app:layout_constraintBottom_toBottomOf="@id/track_time_title"
@@ -154,15 +177,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/album_audio_player"
-        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/track_time_title"
         style="@style/apInformationTitle"
         />
 
     <TextView
         android:id="@+id/collection_name_value"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintEnd_toEndOf="@+id/right_guideline"
         app:layout_constraintTop_toTopOf="@id/collection_name_title"
         app:layout_constraintBottom_toBottomOf="@id/collection_name_title"
@@ -174,15 +198,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/year_audio_player"
-        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/collection_name_title"
         style="@style/apInformationTitle"
         />
 
     <TextView
         android:id="@+id/release_date_value"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintEnd_toEndOf="@+id/right_guideline"
         app:layout_constraintTop_toTopOf="@id/release_date_title"
         app:layout_constraintBottom_toBottomOf="@id/release_date_title"
@@ -194,15 +219,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/genre_audio_player"
-        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/release_date_title"
         style="@style/apInformationTitle"
         />
 
     <TextView
         android:id="@+id/primary_genre_name_value"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintEnd_toEndOf="@+id/right_guideline"
         app:layout_constraintTop_toTopOf="@id/primary_genre_name_title"
         app:layout_constraintBottom_toBottomOf="@id/primary_genre_name_title"
@@ -214,15 +240,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/country_audio_player"
-        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/primary_genre_name_title"
         style="@style/apInformationTitle"
         />
 
     <TextView
         android:id="@+id/country_value"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintEnd_toEndOf="@+id/right_guideline"
         app:layout_constraintTop_toTopOf="@id/country_title"
         app:layout_constraintBottom_toBottomOf="@id/country_title"
