--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".activity.AudioPlayerActivity">
+    tools:context=".ui.audioPlayer.AudioPlayerActivity">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/activity_audio_player"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activity.AudioPlayerActivity">
+    tools:context=".ui.audioPlayer.AudioPlayerActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_guideline"
