--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -198,13 +198,14 @@
     </style>
 
     <style name="createPlaylistBtn" parent="refreshBtn">
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="android:layout_marginTop">0dp</item>
-        <item name="android:layout_marginBottom">46dp</item>
+        <item name="android:insetTop">@dimen/size_null</item>
+        <item name="android:insetBottom">@dimen/size_null</item>
+        <item name="android:layout_marginTop">@dimen/size_null</item>
+        <item name="android:minHeight">@dimen/size_null</item>
+        <item name="android:layout_marginBottom">@dimen/margin_bottom_btn_playlist</item>
         <item name="android:paddingVertical">@dimen/vertical_refresh</item>
         <item name="android:paddingHorizontal">@dimen/horizontal_refresh</item>
-        <item name="android:minHeight">0dp</item>
+
     </style>
 
     <style name="fragmentPlaylistLibrary">
@@ -212,11 +213,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">vertical</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginTop">@dimen/margin_top_playlist</item>
     </style>
 
     <style name="fragmentFavoritesLibrary" parent="fragmentPlaylistLibrary">
-        <item name="android:layout_marginTop">106dp</item>
+        <item name="android:layout_marginTop">@dimen/margin_top_favorites</item>
+    </style>
+
+    <style name="tabLibrary" parent="baseFont">
+        <item name="android:textSize">@dimen/font_size_small</item>
+        <item name="android:textColor">?attr/titleTrackColor</item>
+        <item name="android:background">?attr/backgroundTab</item>
     </style>
 
 </resources>
