--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -27,7 +27,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white" />
+        style="@style/tabLibrary" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
