--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,4 +9,5 @@
     <attr name="colorControlPanel" format="reference|color"/>
     <attr name="colorInformationTitle" format="reference|color"/>
     <attr name="colorInformationValue" format="reference|color"/>
+    <attr name="backgroundTab" format="reference|color"/>
 </resources>
