--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,11 +2,13 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:background="?attr/mainActivityBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/mainActivity"
+    tools:context=".main.ui.MainFragment"
     >
 
     <TextView
