--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/margin_icon_navigation</item>
+        <item name="android:paddingBottom">@dimen/margin_bottom_title</item>
         <item name="android:textColor">?attr/colorPrimary</item>
     </style>
 
