--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -20,6 +20,10 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"
+        android:elevation="0dp"
+        android:background="@drawable/nav_menu_background"
+        app:itemIconTint="@color/nav_menu_color"
+        app:itemTextColor="@color/nav_menu_color"/>
 </LinearLayout>
 
