--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,11 @@
     <color name="ap_information_value_light">#1A1B22</color>
     <color name="ap_information_value_dark">#FFFFFF</color>
     <color name="progress_bar">#3772E7</color>
+    <color name="active_tab_nav_menu_light">#3772E7</color>
+    <color name="tab_nav_menu_light">#1A1B22</color>
+    <color name="active_tab_nav_menu_dark">#3772E7</color>
+    <color name="tab_nav_menu_dark">#FFFFFFFF</color>
+    <color name="background_nav_menu_light">#FFFFFFFF</color>
+    <color name="background_nav_menu_dark">#1A1B22</color>
+    <color name="color_shadow_nav_menu">#737373</color>
 </resources>
