--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,11 @@
         android:name="com.practicum.playlistmaker.library.ui.LibraryFragment"
         android:label="fragment_library"
         tools:layout="@layout/fragment_library"/>
+
+    <action
+        android:id="@+id/action_libraryFragment_to_audioPlayerFragment"
+        app:destination="@id/audioPlayerFragment" />
+
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.practicum.playlistmaker.setting.ui.SettingFragment"
