--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,15 +23,26 @@
         android:id="@+id/libraryFragment"
         android:name="com.practicum.playlistmaker.library.ui.LibraryFragment"
         android:label="fragment_library"
-        tools:layout="@layout/fragment_library"/>
+        tools:layout="@layout/fragment_library">
+        <action
+            android:id="@+id/action_libraryFragment_to_playlistAddFragment"
+            app:destination="@id/playlistAddFragment" />
+    </fragment>
 
     <action
         android:id="@+id/action_libraryFragment_to_audioPlayerFragment"
         app:destination="@id/audioPlayerFragment" />
+
+
 
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.practicum.playlistmaker.setting.ui.SettingFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/playlistAddFragment"
+        android:name="com.practicum.playlistmaker.library.ui.PlaylistAddFragment"
+        android:label="fragment_playlist_add"
+        tools:layout="@layout/fragment_playlist_add" />
 </navigation>
