--- a/app/src/main/res/layout/fragment_playlist_add.xml
+++ b/app/src/main/res/layout/fragment_playlist_add.xml
@@ -1,17 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".library.ui.PlaylistAddFragment">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
 
-    <LinearLayout style="@style/fragmentPlaylistLibrary">
+android:id="@+id/playlist_add_fragment"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+style="@style/mainActivity"
+tools:context=".library.ui.PlaylistAddFragment">
 
-        <TextView
-            android:id="@+id/errorTextView"
-            style="@style/titleErrorLibraryStyle"
-            android:text="@string/playlist_not_created" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/size_null"
+        />
 
-    </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/right_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/size_null"
+        />
 
-</FrameLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_guide_content_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/margin_guide_content_audio_player"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/right_content_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/margin_guide_content_audio_player"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="@dimen/size_null"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottom_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="@dimen/bottom_playlist_add"/>
+
+    <ImageView
+        android:id="@+id/arrow_back"
+        style="@style/imageInTitleActivity"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow_back"
+        app:layout_constraintStart_toEndOf="@+id/left_guideline"
+        app:layout_constraintTop_toTopOf="@+id/top_guide" />
+
+    <TextView
+        android:text="@string/btn_playlist_add"
+        app:layout_constraintStart_toEndOf="@id/arrow_back"
+        app:layout_constraintTop_toTopOf="@id/arrow_back"
+        app:layout_constraintBottom_toBottomOf="@id/arrow_back"
+        style="@style/titlePlaylistActivity"/>
+
+    <ImageView
+        android:id="@+id/add_photo"
+        android:layout_width="@dimen/size_null"
+        android:layout_height="@dimen/size_null"
+        android:layout_marginTop="@dimen/margin_top_image_playlist_add"
+        android:contentDescription="@string/content_description_playlist"
+        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
+        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
+        android:background="@drawable/image_rectangle"
+        />
+
+    <ImageView
+        android:id="@+id/icon_add_photo_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/add_photo"
+        android:contentDescription="@string/content_description_playlist"
+        app:layout_constraintTop_toTopOf="@id/add_photo"
+        app:layout_constraintBottom_toBottomOf="@id/add_photo"
+        app:layout_constraintStart_toStartOf="@id/add_photo"
+        app:layout_constraintEnd_toEndOf="@id/add_photo" />
+
+    <EditText
+        android:id="@+id/name_playlist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_bottom_image_playlist_add"
+        style="@style/playlist_edit_text"
+        android:hint="@string/playlist_name"
+        app:layout_constraintEnd_toStartOf="@id/add_photo"
+        app:layout_constraintStart_toStartOf="@id/add_photo"
+        app:layout_constraintTop_toBottomOf="@id/add_photo"
+        android:background="@drawable/edit_text_rectangle"/>
+
+    <EditText
+        android:id="@+id/description_playlist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_bottom_edit_text_playlist_add"
+        style="@style/playlist_edit_text"
+        android:hint="@string/playlist_description"
+        app:layout_constraintEnd_toStartOf="@id/name_playlist"
+        app:layout_constraintStart_toStartOf="@id/name_playlist"
+        app:layout_constraintTop_toBottomOf="@id/name_playlist"
+        android:background="@drawable/edit_text_rectangle"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/playlist_btn_add"
+        android:background="@drawable/button_add_playlist"
+        android:enabled="false"
+        style="@style/playlist_btn"
+        app:layout_constraintStart_toEndOf="@+id/left_guideline"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_guide"
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
