--- a/app/src/main/res/drawable/edit_text_rectangle.xml
+++ b/app/src/main/res/drawable/edit_text_rectangle.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-  
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:color="@color/icon_color_light"
+        android:width="@dimen/width_image_rectangle"/>
+    <corners android:radius="@dimen/radius_image_rectangle" />
 </shape>
