--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,8 +33,11 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/margin_icon_navigation</item>
-        <item name="android:paddingBottom">@dimen/margin_bottom_title</item>
         <item name="android:textColor">?attr/colorPrimary</item>
+    </style>
+
+    <style name="titlePlaylistActivity" parent="titleActivity">
+        <item name="android:layout_marginStart">@dimen/margin_icon_navigation_playlist</item>
     </style>
 
     <style name="titleHistorySearch" parent="titleActivity">
@@ -51,6 +54,7 @@
     </style>
 
     <style name="imageInTitleActivity">
+        <item name="android:paddingTop">3dp</item>
         <item name="android:layout_width">@dimen/icon_size</item>
         <item name="android:layout_height">@dimen/icon_size</item>
     </style>
@@ -230,6 +234,21 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/font_size_small</item>
         <item name="android:textColor">?attr/titleTrackColor</item>
+    </style>
+
+    <style name="playlist_edit_text">
+        <item name="android:paddingTop">@dimen/padding_top_edit_text_playlist_add</item>
+        <item name="android:paddingBottom">@dimen/padding_bottom_edit_text_playlist_add</item>
+        <item name="android:paddingHorizontal">@dimen/padding_horizontal_edit_text_playlist_add</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/font_size_placeholder</item>
+        <item name="android:textColor">?attr/colorNote</item>
+    </style>
+
+    <style name="playlist_btn" parent="playlist_edit_text">
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
