--- a/app/src/main/res/layout/fragment_playlist_add.xml
+++ b/app/src/main/res/layout/fragment_playlist_add.xml
@@ -95,31 +95,42 @@ tools:context=".library.ui.PlaylistAddFragment">
         app:layout_constraintStart_toStartOf="@id/add_photo"
         app:layout_constraintEnd_toEndOf="@id/add_photo" />
 
-    <EditText
-        android:id="@+id/name_playlist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/margin_bottom_image_playlist_add"
-        style="@style/playlist_edit_text"
-        android:hint="@string/playlist_name"
-        app:layout_constraintEnd_toStartOf="@id/add_photo"
-        app:layout_constraintStart_toStartOf="@id/add_photo"
-        app:layout_constraintTop_toBottomOf="@id/add_photo"
-        android:background="@drawable/edit_text_rectangle"/>
 
-    <EditText
-        android:id="@+id/description_playlist"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/name_playlistLayout"
+        style="@style/playlist_edit_text_Layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_bottom_image_playlist_add"
+        app:layout_constraintStart_toStartOf="@id/add_photo"
+        app:layout_constraintEnd_toEndOf="@id/add_photo"
+        app:layout_constraintTop_toBottomOf="@id/add_photo">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/playlist_name"
+            style="@style/playlist_edit_text"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/description_PlaylistLayout"
+        style="@style/playlist_edit_text_Layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_bottom_edit_text_playlist_add"
-        style="@style/playlist_edit_text"
-        android:hint="@string/playlist_description"
-        app:layout_constraintEnd_toStartOf="@id/name_playlist"
-        app:layout_constraintStart_toStartOf="@id/name_playlist"
-        app:layout_constraintTop_toBottomOf="@id/name_playlist"
-        android:background="@drawable/edit_text_rectangle"/>
+        app:layout_constraintStart_toStartOf="@id/name_playlistLayout"
+        app:layout_constraintEnd_toEndOf="@id/name_playlistLayout"
+        app:layout_constraintTop_toBottomOf="@id/name_playlistLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/description_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/playlist_description"
+            style="@style/playlist_edit_text"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
