--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -251,4 +251,17 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="playlist_edit_text_Layout">
+        <item name="boxBackgroundMode">outline</item>
+        <item name="boxStrokeWidth">@dimen/width_image_rectangle</item>
+        <item name="boxStrokeWidthFocused">@dimen/width_image_rectangle</item>
+        <item name="boxStrokeColor">@color/icon_color_light</item>
+        <item name="boxBackgroundColor">@android:color/transparent</item>
+        <item name="hintTextColor">?attr/borderPlaylistAdd</item>
+        <item name="boxCornerRadiusTopStart">@dimen/radius_image_rectangle</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/radius_image_rectangle</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/radius_image_rectangle</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/radius_image_rectangle</item>
+    </style>
+
 </resources>
