--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,7 @@
         <item name="colorActiveTabNavMenu">@color/active_tab_nav_menu_light</item>
         <item name="colorTabNavMenu">@color/tab_nav_menu_light</item>
         <item name="backgroundNavMenu">@color/background_nav_menu_light</item>
+        <item name="borderPlaylistAdd">@color/ap_information_title</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
