--- a/app/src/main/res/layout/fragment_playlist_add.xml
+++ b/app/src/main/res/layout/fragment_playlist_add.xml
@@ -25,22 +25,6 @@ tools:context=".library.ui.PlaylistAddFragment">
         app:layout_constraintGuide_end="@dimen/size_null"
         />
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/left_guide_content_line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/margin_guide_content_audio_player"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/right_content_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/margin_guide_content_audio_player"/>
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/top_guide"
         android:layout_width="wrap_content"
@@ -53,15 +37,25 @@ tools:context=".library.ui.PlaylistAddFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="@dimen/bottom_playlist_add"/>
+        app:layout_constraintGuide_end="@dimen/padding_bottom_playlist_add"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top_image_playlist_add"
+        app:layout_constraintStart_toEndOf="@id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/right_guideline"
+        app:layout_constraintTop_toTopOf="parent">
 
     <ImageView
         android:id="@+id/arrow_back"
         style="@style/imageInTitleActivity"
         android:layout_height="wrap_content"
         android:src="@drawable/arrow_back"
-        app:layout_constraintStart_toEndOf="@+id/left_guideline"
-        app:layout_constraintTop_toTopOf="@+id/top_guide" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:text="@string/btn_playlist_add"
@@ -69,6 +63,39 @@ tools:context=".library.ui.PlaylistAddFragment">
         app:layout_constraintTop_toTopOf="@id/arrow_back"
         app:layout_constraintBottom_toBottomOf="@id/arrow_back"
         style="@style/titlePlaylistActivity"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:layout_marginBottom="-44dp"
+        app:layout_constraintTop_toBottomOf="@id/header_container"
+        app:layout_constraintBottom_toTopOf="@id/bottom_spacer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/left_guide_content_line"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/margin_guide_content_audio_player"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/right_content_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/margin_guide_content_audio_player"/>
 
     <ImageView
         android:id="@+id/add_photo"
@@ -80,7 +107,7 @@ tools:context=".library.ui.PlaylistAddFragment">
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
-        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/image_rectangle"
         />
 
@@ -132,7 +159,13 @@ tools:context=".library.ui.PlaylistAddFragment">
             style="@style/playlist_edit_text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/add_playlist_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -141,8 +174,17 @@ tools:context=".library.ui.PlaylistAddFragment">
         android:enabled="false"
         style="@style/playlist_btn"
         app:layout_constraintStart_toEndOf="@+id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_guide"
         />
+
+    <View
+        android:id="@+id/bottom_spacer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
