--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -71,5 +71,6 @@
     <dimen name="padding_top_edit_text_playlist_add">18dp</dimen>
     <dimen name="padding_bottom_edit_text_playlist_add">19dp</dimen>
     <dimen name="padding_bottom_playlist_add">32dp</dimen>
+    <dimen name="font_size_text_playlist">12sp</dimen>
 
 </resources>
